--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,20 @@ sysinfo.txt
 FYPJ/Assets/stan_prefabs/RainbowBeatParticles.unitypackage.meta
 FYPJ/Assets/stan_prefabs/CrowdParticles.unitypackage.meta
 FYPJ/Assets/stan_prefabs/Crowd.unitypackage.meta
+FYPJ/Assets/Prefabs/Packages/BeatGlow.unitypackage.meta
+FYPJ/Assets/Prefabs/Packages/BlackNotes.unitypackage.meta
+FYPJ/Assets/Prefabs/Packages/New Beat Prefabs.unitypackage.meta
+FYPJ/Assets/Prefabs/Packages/QuadGreyGem.unitypackage.meta
+FYPJ/Assets/Prefabs/Packages/RainbowBeatParticles.unitypackage.meta
+FYPJ/Assets/Prefabs/Packages/RythmSync.unitypackage.meta
+FYPJ/Assets/Prefabs/Packages/Speaker.unitypackage.meta
+FYPJ/Assets/stan_prefabs/Crowd.unitypackage.meta
+FYPJ/Assets/stan_prefabs/CrowdParticles.unitypackage.meta
+FYPJ/Assets/stan_prefabs/NewFadingBeat.unitypackage.meta
+FYPJ/Assets/stan_prefabs/OptionMenu.unitypackage.meta
+FYPJ/Assets/stan_prefabs/RainbowBeatParticles.unitypackage.meta
+FYPJ/Assets/stan_prefabs/Crowd.unitypackage.meta
+FYPJ/Assets/stan_prefabs/CrowdParticles.unitypackage.meta
+FYPJ/Assets/stan_prefabs/NewFadingBeat.unitypackage.meta
+FYPJ/Assets/stan_prefabs/OptionMenu.unitypackage.meta
+FYPJ/Assets/stan_prefabs/RainbowBeatParticles.unitypackage.meta
