Changes to prefabs and spawning.
Note:
 - What the title says.

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ FYPJ/Assets/stan_prefabs/CrowdParticles.unitypackage.meta
 FYPJ/Assets/stan_prefabs/NewFadingBeat.unitypackage.meta
 FYPJ/Assets/stan_prefabs/OptionMenu.unitypackage.meta
 FYPJ/Assets/stan_prefabs/RainbowBeatParticles.unitypackage.meta
+FYPJ/Assets/stan_prefabs/billboard.unitypackage.meta
